src/test/deca/context/invalid/expr_cast_boolean_to_int.deca
// Test of the rule (3.39) : can't cast boolean to int.

{
	int var1;
	boolean var2;
	var1 = (int)(var2);
}

// Résultat :
//# a
